--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <div class="calculadora">
             <h1>Calculadora</h1>
             <p id="resultado"></p>
+            <div class="display">
+                 <h2 id="history"></h2>
+            </div>
             <table>
                 <tr>
                     <td><button class="botao" onclick="clean()">C</button></td>
@@ -43,6 +46,7 @@
                 </tr>
             </table>
         </div>
+          
     </div>
     <script src="script.js"></script>
 </body>
