--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <table>
                 <tr>
-                    <td><button class="botao" onclick="clean()">C</button></td>
-                    <td><button class="botao" onclick="back()"><</button></td>
+                    <td><button class="botao" onclick="clean('C')">C</button></td>
+                    <td><button class="botao" onclick="back('<')"><</button></td>
                     <td><button class="botao" onclick="insert('/')">/</button></td>
                     <td><button class="botao" onclick="insert('*')">X</button></td>
                 </tr>
